# invest_mate

./: .gitignore  manage.py  pyproject.toml  readme.md
.github/workflows/: invest_mate_ci.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
stock_market/: apps.py
workbooks/: apps.py
