[tool.poetry]
name = "investmate"
version = "0.1.0"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-crispy-forms = "^2.3"
psycopg2 = "^2.9.9"
crispy-bootstrap5 = "^2024.2"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
django-debug-toolbar = "^4.4.6"
pre-commit = "^3.8.0"
bandit = "^1.7.9"
ruff = "^0.6.2"
safety = "^3.2.6"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
